--- a/src/components/Autocomplete.css
+++ b/src/components/Autocomplete.css
@@ -1,3 +1,5 @@
+/*Estilos de autocomplete*/
+
 .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
     text-align: left;
     position: relative;
@@ -6,7 +8,7 @@
     top: -5px;
     left: 0;
     margin: 0;
-    padding: 0 8px;
+    padding: 0 4px;
     pointer-events: none;
     border-radius: inherit;
     border-style: solid;
@@ -14,9 +16,9 @@
     overflow: hidden;
     min-width: 0%;
     border-color: rgba(0, 0, 0, 0) !important;
-}
-
-.css-wb57ya-MuiFormControl-root-MuiTextField-root {
+  }
+  
+  .css-wb57ya-MuiFormControl-root-MuiTextField-root {
     display: -webkit-inline-box;
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
@@ -36,9 +38,9 @@
     height: 40px;
     width: 110% !important;
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.182);
-}
-
-.css-wb57ya-MuiFormControl-root-MuiTextField-root {
+  }
+  
+  .css-wb57ya-MuiFormControl-root-MuiTextField-root {
     display: -webkit-inline-box;
     display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
@@ -54,4 +56,8 @@
     vertical-align: top;
     width: 100%;
     bottom: 10px;
-}
+  }
+  .css-1c20jd8-MuiAutocomplete-root .MuiAutocomplete-inputRoot .MuiAutocomplete-input {
+    width: 0;
+    min-width: 777px !important;
+  }
