--- a/src/components/Password.css
+++ b/src/components/Password.css
@@ -58,6 +58,41 @@ element.style {
     transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
     margin-right: -12px;
     position: relative;
-    bottom: 26px !important;
-    left: 98px !important;
+    bottom: 29px !important;
+    left: 99px !important;
 }
+.css-pt24ou-MuiFormControl-root-MuiTextField-root .MuiOutlinedInput-root {
+    border-bottom: none !important;
+    background-color: white !important;
+    margin: 25px !important;
+    border-radius: 30px;
+    height: 40px !important;
+    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.182);
+}
+.css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root {
+    color: rgba(0, 0, 0, 0.6);
+    font-family: "Roboto","Helvetica","Arial",sans-serif;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.4375em;
+    letter-spacing: 0.00938em;
+    padding: 0;
+    position: relative;
+    display: block;
+    transform-origin: top left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: calc(100% - 24px);
+    position: absolute;
+    left: 0;
+    top: -6px !important;
+    -webkit-transform: translate(14px, 16px) scale(1);
+    -moz-transform: translate(14px, 16px) scale(1);
+    -ms-transform: translate(14px, 16px) scale(1);
+    transform: translate(14px, 16px) scale(1);
+    -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+    z-index: 1;
+    pointer-events: none;
+  }
